# ChessEngine

./: Arama.py  Degerlendirme.py  GelismisArama.py  HamleUret.py  LegalHamle.py  MatKontrol.py  MoveOrdering.py  PAWN_PROMOTION_FEATURE.md  README.md  Tahta.py  TranspositionTable.py  Zobrist.py  ana.py  optimizasyon_ozeti.md  performance_test.py  test_basit_performans.py  test_depth_change.py  test_derinlik_tutarliligi.py  test_engine.py  test_optimizasyon.py  test_proje.py  test_tt_debug.py  test_tt_simple.py
satranc_cpp/: CMakeLists.txt  Makefile  README.md
satranc_cpp/include/: AramaMotoru.h  Arayuz.h  BitboardYardimci.h  Degerlendirici.h  Hamle.h  HamleUretici.h  Oyun.h  Sabitler.h  Tahta.h
satranc_cpp/src/: AramaMotoru.cpp  Arayuz.cpp  BitboardYardimci.cpp  Degerlendirici.cpp  HamleUretici.cpp  Oyun.cpp  Tahta.cpp  ana.cpp
